Add demo DB and Spring Data

--- a/src/main/resources/templates/wordle.html
+++ b/src/main/resources/templates/wordle.html
@@ -64,12 +64,14 @@
 </head>
 <body>
 	<div class="Wordle">
-<!-- 		<h1 class="Wordle-Message">Браво! Позна думата с 5 опита 🎉 -->
-<!-- 			<a href="/">Играй отновo</a> -->
-<!-- 		</h1> -->
-<!-- 		<h1 class="Wordle-Message">Жалко! Не успя да познаеш думата 😢 -->
-<!-- 			<a href="/">Опитай пак</a> -->
-<!-- 		</h1> -->
+		<h1 th:if="${game.state.name() == 'WIN'}" class="Wordle-Message">Браво! Позна думата с <span th:text="${game.guesses.size()}">6</span> опита 🎉
+			<a href="/">Играй отновo</a>
+		</h1>
+		
+		<h1 th:if="${game.state.name() == 'LOSS'}" class="Wordle-Message">Жалко! Не успя да познаеш думата 😢
+			<a href="/">Опитай пак</a>
+		</h1>
+		
 		<h1 th:if="${error}" th:text="${error}">Невалидна дума</h1>
 		<form method="post" th:action="@{/games/{gameId}/guesses(gameId=${game.id})}">
 			<div th:each="guess: ${game.guesses}">
@@ -81,8 +83,10 @@
 						th:classappend="${'Wordle-Match_' + guess.matches.charAt(charStat.index)}">a</span>
 				</div>
 			</div>
-			<input name="guess" maxlength="5" autofocus/>
-			<button>Check</button>
+			<div th:if="${game.state.name() == 'ONGOING'}">
+				<input name="guess" maxlength="5" autofocus/>
+				<button>Check</button>
+			</div>
 		</form>
 		<div>
 			<h3>Статистика за използваните букви:</h3>
