--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,32 @@
 	align-items: center;
 	flex-direction: column;
 }
+
+.Index-Last10 {
+  margin-top: 1rem;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border: 1px solid lightgray;
+}
+
+.Index-Last10 > caption {
+  font-size: larger;
+  padding-bottom: 0.5rem;
+}
+
+.Index-Last10 tbody tr:nth-child(odd) {
+  background-color: lightgray;
+}
+
+.Index-Last10 tbody tr:nth-child(even) {
+  background-color: white;
+}
+
+.Index-Last10 th,
+.Index-Last10 td {
+  padding: 0.5rem;
+  border: 1px solid rgb(190,190,190);
+}
 </style>
 </head>
 <body>
@@ -19,6 +45,26 @@
 		<form method="post" th:action="@{/games}">
 			<button>Start New Game</button>
 		</form>
+
+		<div>
+			<table class="Index-Last10">
+				<caption>Резултати от последните 10 игри</caption>
+				<thead>
+					<th>Дата</th>
+					<th>Резултат</th>
+					<th>Опити</th>
+					<th>Дума</th>
+				</thead>
+				<tbody >
+					<tr th:each="game: ${last10}">
+						<td th:text="${{game.startedOn}}">12/10/2023</td>
+						<td th:text="${game.state}">LOST</td>
+						<td th:text="${game.guesses.size()}">6</td>
+						<td th:text="${game.word}">проба</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </body>
 </html>
