Front-end authorization with @casl/react

--- a/src/main/frontend/src/Game.css
+++ b/src/main/frontend/src/Game.css
@@ -1,58 +1,71 @@
 .Wordle {
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .Wordle-Message {
-	text-align: center;
+  text-align: center;
 }
 
 .Wordle-Message > a {
-	display: block;
-	font-size: 1.2rem;
+  display: block;
+  font-size: 1.2rem;
 }
 
-.Wordle-Match {
-	color: white;
-	text-align: center;
-	text-transform: uppercase;
-	padding: 0.2rem 0;
-	width: 2.4rem;
-	display: inline-block;
-	margin: 0.1rem;
-	font-size: 2rem;
-	border: 1px solid #787c7e
+.Wordle-Match,
+.Wordle-Key {
+  color: #787c7e;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 0.2rem 0;
+  width: 2.4rem;
+  display: inline-block;
+  margin: 0.1rem;
+  font-size: 2rem;
+  border: 1px solid #787c7e;
 }
 
-.Wordle-Match_U {
-	color: #787c7e;
+.Wordle-Keyboard {
+  display: grid;
+  grid-template-columns: repeat(11, auto);
+  grid-template-rows: repeat(3, auto);
+}
+
+.Wordle-Key {
+  border-radius: 5px;
+}
+
+.Wordle-Backspace {
+  font-size: 1rem;
+  grid-area: 1 / 11 / 1 / 11;
+}
+
+.Wordle-Enter {
+  grid-area: 2 / 11 / 4 / 11;
 }
 
 .Wordle-Match_N {
-	background-color: #787c7e;
+  color: white;
+  background-color: #787c7e;
 }
 
 .Wordle-Match_P {
-	background-color: #6aaa64;
-	border-color: #6aaa64;
+  color: white;
+  background-color: #6aaa64;
+  border-color: #6aaa64;
 }
 
 .Wordle-Match_L {
-	background-color: #c9b458;
-	border-color: #c9b458;
-}
-
-.Wordle-LettersStat {
-	display: flex;
-	width: 29rem;
-	flex-wrap: wrap;
+  color: white;
+  background-color: #c9b458;
+  border-color: #c9b458;
 }
 
 .Wordle form input {
-	width: 13rem;
+  width: 13rem;
 }
 
 .Wordle-Error {
